# confini-amministrativi-istat

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  ANPR_archivio_comuni.csv  AUTHORS  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Pipfile  README.md  generate.sh  main.py  nginx.conf  pyproject.toml  requirements.txt  run.sh  sources.json  sources.schema.json  sources.schema.min.json
api/: index.html  openapi.v1.yaml
src/app/: .prettierrc  App.jsx  README.md  index.html  index.js  package-lock.json  package.json  tailwind.config.js
templates/: map.html.j2
tutorials/qgis/: README.md
v1/20210101/csv/comuni/: comuni.csv
v1/20210101/geojson/regioni/: regioni.json
v1/20210101/geojson/ripartizioni-geografiche/: ripartizioni-geografiche.json
v1/20210101/geopkg/regioni/: regioni.gpkg
v1/20210101/geopkg/ripartizioni-geografiche/: ripartizioni-geografiche.gpkg
v1/20210101/geopkg/unita-territoriali-sovracomunali/: unita-territoriali-sovracomunali.gpkg
v1/20210101/json/comuni/: comuni.json
v1/20210101/json/regioni/: regioni.json
v1/20210101/shp/comuni/: comuni.dbf  comuni.shx
v1/20210101/shp/regioni/: regioni.dbf  regioni.shp  regioni.shx
v1/20210101/shp/ripartizioni-geografiche/: ripartizioni-geografiche.dbf  ripartizioni-geografiche.shp  ripartizioni-geografiche.shx
v1/20210101/shp/unita-territoriali-sovracomunali/: unita-territoriali-sovracomunali.dbf  unita-territoriali-sovracomunali.shp  unita-territoriali-sovracomunali.shx
v1/20210101/topojson/regioni/: regioni.json
(+35 files in other folders)
